@@ -39,7 +39,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)version.c	2.376 (gritter) 8/4/07";
+static char sccsid[] = "@(#)version.c	2.377 (gritter) 8/4/07";
 #endif
 #endif /* not lint */
 
@@ -101,7 +101,7 @@ quit.c:static char sccsid[] = "@(#)quit.c	2.28 (gritter) 3/4/06";
 rcv.h: *	Sccsid @(#)rcv.h	2.7 (gritter) 3/4/06
 send.c:static char sccsid[] = "@(#)send.c	2.85 (gritter) 6/16/07";
 sendout.c:static char sccsid[] = "@(#)sendout.c	2.95 (gritter) 6/16/07";
-smtp.c:static char sccsid[] = "@(#)smtp.c	2.42 (gritter) 01/12/07";
+smtp.c:static char sccsid[] = "@(#)smtp.c	2.43 (gritter) 8/4/07";
 ssl.c:static char sccsid[] = "@(#)ssl.c	1.39 (gritter) 6/12/06";
 strings.c:static char sccsid[] = "@(#)strings.c	2.6 (gritter) 3/4/06";
 temp.c:static char sccsid[] = "@(#)temp.c	2.8 (gritter) 3/4/06";
